--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [discord]
-token = OTMzMjYyOTIzNzg1MTgzMjUz.GErSUP.qleITLL3KDiZ-hxSNHQYyo-B-W4TdNN49zhZQs
+token = OTMzMjYyOTIzNzg1MTgzMjUz.GYm8BD.lyQpUJpZX_CiexSlDN90e4pLjrOvKEvxbPYyTU
 channel_id = 1300291026673729548   ; channel target
 
 [bot]
