--- a/config.yaml
+++ b/config.yaml
@@ -8,3 +8,5 @@ channel_id:
 token_delay: 5  # Delay for each token processing in seconds
 message_delay: 2  # Delay for each message sent in seconds
 restart_delay: 10  # Delay before restarting the bot in seconds
+
+openai_api_key: "sk-XXXXXXXXXXXXXXXXXXXX"
