--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-requests
-PyYAML
-colorama
-google-generativeai>=0.5.0
-pyyaml>=6.0
 requests>=2.31.0
+PyYAML>=6.0
 colorama>=0.4.6
+google-generativeai>=0.5.0
+discord.py>=2.3.2
