--- a/config.yaml
+++ b/config.yaml
@@ -9,9 +9,8 @@ token_delay: 5  # Delay for each token processing in seconds
 message_delay: 2  # Delay for each message sent in seconds
 restart_delay: 10  # Delay before restarting the bot in seconds
 
-
 api_provider: gemini
+api_key: "AIzxxxxxxxxxxxxxxxxxxxxxxxxxxxx"    #Gemini API Key
+model: "models/gemma-3-27b-it"    #your Gemini AI Model
 
-api_key: "AIzxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
-
-model: "models/gemma-3-27b-it"
+random_chat: true    # Set to false if you only want AI replies
